# motus

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
examples/plugins/: __init__.py  echo.py
examples/rules/: complex_rule.yaml  example_rule.yaml
motus/: __init__.py  __main__.py  adapter.py  core.py  ingestor.py  logging_config.py  metrics.py  persistence.py  registry.py  utils.py
motus/plugins/: __init__.py
motus/plugins/adapters/: __init__.py  dummy.py  email.py  http_post.py  logger.py
motus/plugins/ingestors/: __init__.py  webhook.py
tests/: __init__.py  test_adapter.py  test_core.py  test_ingestor.py  test_integration.py  test_plugins.py  test_utils.py
